--- a/juniperNetworks_CodeChallenge/index.html
+++ b/juniperNetworks_CodeChallenge/index.html
@@ -165,6 +165,7 @@
             <h5> <label>{{jsonQuery}}</label></h5>
         </div>
         <div class="row" ng-if="submit">
+            <div class="alert alert-success result">JSON: {{jsonObj}}</div>
         </div>
 
         <button type="submit" class="btn btn-Secondary" ng-click="removeJsonQuery()">Clear</button>
