--- a/juniperNetworks_CodeChallenge/index.html
+++ b/juniperNetworks_CodeChallenge/index.html
@@ -143,11 +143,15 @@
                                 </div>
                             </div>
 
-                            <label ng-if="!$last">-------------AND--------------</label>
+
+                            <button type="button" class="btn btn-primary btn-lg btn-block" disabled ng-if="!$last">-------------AND--------------</button><br>
+
+
 
                         </div>
                     </div>
-                    <label ng-if="!$last">-------------OR--------------</label>
+                    <button type="button" class="btn btn-primary btn-lg btn-block" disabled ng-if="!$last">-------------OR--------------</button><br>
+
                 </div>
 
 
